--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "NODE_ENV=development tsup src/index.ts --watch",
     "build": "tsup src/index.ts --dts --minify",
+    "pre-all": "node auto-edit",
     "test": "vitest",
     "test:ui": "vitest --ui"
   },
